# jax-smi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
examples/: main.py
src/jax_smi/: __init__.py  cli_tool.py  common_utils.py  initialise_tracking.py
